--- a/part3.ipynb
+++ b/part3.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id_policy</th>\n      <th>pol_bonus</th>\n      <th>pol_coverage</th>\n      <th>pol_duration</th>\n      <th>pol_sit_duration</th>\n      <th>pol_pay_freq</th>\n      <th>pol_payd</th>\n      <th>pol_usage</th>\n      <th>pol_insee_code</th>\n      <th>drv_drv2</th>\n      <th>...</th>\n      <th>vh_type</th>\n      <th>vh_value</th>\n      <th>vh_weight</th>\n      <th>town_mean_altitude</th>\n      <th>town_surface_area</th>\n      <th>population</th>\n      <th>commune_code</th>\n      <th>canton_code</th>\n      <th>city_district_code</th>\n      <th>regional_department_code</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>A00013211-V01</td>\n      <td>0.5</td>\n      <td>Maxi</td>\n      <td>36</td>\n      <td>6</td>\n      <td>Biannual</td>\n      <td>No</td>\n      <td>Retired</td>\n      <td>68269</td>\n      <td>No</td>\n      <td>...</td>\n      <td>Tourism</td>\n      <td>17517</td>\n      <td>1260</td>\n      <td>526.0</td>\n      <td>3216.0</td>\n      <td>4.8</td>\n      <td>269.0</td>\n      <td>20.0</td>\n      <td>5.0</td>\n      <td>68</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>A00040885-V01</td>\n      <td>0.5</td>\n      <td>Maxi</td>\n      <td>15</td>\n      <td>5</td>\n      <td>Yearly</td>\n      <td>No</td>\n      <td>WorkPrivate</td>\n      <td>29019</td>\n      <td>Yes</td>\n      <td>...</td>\n      <td>Tourism</td>\n      <td>21500</td>\n      <td>1480</td>\n      <td>57.0</td>\n      <td>4912.0</td>\n      <td>141.3</td>\n      <td>19.0</td>\n      <td>99.0</td>\n      <td>1.0</td>\n      <td>29</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>A00044495-V01</td>\n      <td>0.5</td>\n      <td>Mini</td>\n      <td>16</td>\n      <td>6</td>\n      <td>Monthly</td>\n      <td>No</td>\n      <td>Professional</td>\n      <td>13080</td>\n      <td>No</td>\n      <td>...</td>\n      <td>Commercial</td>\n      <td>23600</td>\n      <td>2931</td>\n      <td>257.0</td>\n      <td>4488.0</td>\n      <td>5.3</td>\n      <td>80.0</td>\n      <td>27.0</td>\n      <td>1.0</td>\n      <td>13</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>A00047266-V01</td>\n      <td>0.5</td>\n      <td>Maxi</td>\n      <td>11</td>\n      <td>7</td>\n      <td>Biannual</td>\n      <td>No</td>\n      <td>WorkPrivate</td>\n      <td>10387</td>\n      <td>No</td>\n      <td>...</td>\n      <td>Tourism</td>\n      <td>13050</td>\n      <td>930</td>\n      <td>109.0</td>\n      <td>1339.0</td>\n      <td>61.2</td>\n      <td>387.0</td>\n      <td>99.0</td>\n      <td>3.0</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>A00074532-V01</td>\n      <td>0.5</td>\n      <td>Median2</td>\n      <td>16</td>\n      <td>6</td>\n      <td>Biannual</td>\n      <td>No</td>\n      <td>WorkPrivate</td>\n      <td>59153</td>\n      <td>Yes</td>\n      <td>...</td>\n      <td>Tourism</td>\n      <td>17974</td>\n      <td>1035</td>\n      <td>24.0</td>\n      <td>1849.0</td>\n      <td>9.7</td>\n      <td>153.0</td>\n      <td>19.0</td>\n      <td>6.0</td>\n      <td>59</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 35 columns</p>\n</div>",
       "text/plain": "       id_policy  pol_bonus pol_coverage  pol_duration  pol_sit_duration  \\\n0  A00013211-V01        0.5         Maxi            36                 6   \n1  A00040885-V01        0.5         Maxi            15                 5   \n2  A00044495-V01        0.5         Mini            16                 6   \n3  A00047266-V01        0.5         Maxi            11                 7   \n4  A00074532-V01        0.5      Median2            16                 6   \n\n  pol_pay_freq pol_payd     pol_usage pol_insee_code drv_drv2  ...  \\\n0     Biannual       No       Retired          68269       No  ...   \n1       Yearly       No   WorkPrivate          29019      Yes  ...   \n2      Monthly       No  Professional          13080       No  ...   \n3     Biannual       No   WorkPrivate          10387       No  ...   \n4     Biannual       No   WorkPrivate          59153      Yes  ...   \n\n      vh_type  vh_value vh_weight town_mean_altitude  town_surface_area  \\\n0     Tourism     17517      1260              526.0             3216.0   \n1     Tourism     21500      1480               57.0             4912.0   \n2  Commercial     23600      2931              257.0             4488.0   \n3     Tourism     13050       930              109.0             1339.0   \n4     Tourism     17974      1035               24.0             1849.0   \n\n   population  commune_code  canton_code  city_district_code  \\\n0         4.8         269.0         20.0                 5.0   \n1       141.3          19.0         99.0                 1.0   \n2         5.3          80.0         27.0                 1.0   \n3        61.2         387.0         99.0                 3.0   \n4         9.7         153.0         19.0                 6.0   \n\n  regional_department_code  \n0                       68  \n1                       29  \n2                       13  \n3                       10  \n4                       59  \n\n[5 rows x 35 columns]"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "0    0\n1    0\n2    0\n3    0\n4    0\nName: made_claim, dtype: int64"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "num_features = 13\n",
-    "pricing_model = PricingModel(neurons=9, num_features=num_features)"
+    "pricing_model = PricingModel(epoch=100, batchsize=128, learnrate=0.01, neurons=9, num_features=num_features)"
    ]
   },
   {
@@ -147,24 +147,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "[epoch:    1] loss: 0.693\n[epoch:    2] loss: 0.693\n[epoch:    3] loss: 0.693\n[epoch:    4] loss: 0.693\n[epoch:    5] loss: 0.693\n[epoch:    6] loss: 0.693\n[epoch:    7] loss: 0.693\n[epoch:    8] loss: 0.693\n[epoch:    9] loss: 0.693\n[epoch:   10] loss: 0.693\n[epoch:   11] loss: 0.693\n[epoch:   12] loss: 0.693\n[epoch:   13] loss: 0.693\n[epoch:   14] loss: 0.693\n[epoch:   15] loss: 0.693\n[epoch:   16] loss: 0.693\n[epoch:   17] loss: 0.693\n[epoch:   18] loss: 0.693\n[epoch:   19] loss: 0.693\n[epoch:   20] loss: 0.693\n[epoch:   21] loss: 0.693\n[epoch:   22] loss: 0.693\n[epoch:   23] loss: 0.693\n[epoch:   24] loss: 0.693\n[epoch:   25] loss: 0.693\n[epoch:   26] loss: 0.693\n[epoch:   27] loss: 0.693\n[epoch:   28] loss: 0.693\n[epoch:   29] loss: 0.693\n[epoch:   30] loss: 0.693\n[epoch:   31] loss: 0.693\n[epoch:   32] loss: 0.693\n[epoch:   33] loss: 0.693\n[epoch:   34] loss: 0.693\n[epoch:   35] loss: 0.693\n[epoch:   36] loss: 0.693\n[epoch:   37] loss: 0.693\n[epoch:   38] loss: 0.693\n[epoch:   39] loss: 0.693\n[epoch:   40] loss: 0.693\n[epoch:   41] loss: 0.693\n[epoch:   42] loss: 0.693\n[epoch:   43] loss: 0.693\n[epoch:   44] loss: 0.693\n[epoch:   45] loss: 0.693\n[epoch:   46] loss: 0.693\n[epoch:   47] loss: 0.693\n[epoch:   48] loss: 0.693\n[epoch:   49] loss: 0.693\n[epoch:   50] loss: 0.693\n[epoch:   51] loss: 0.693\n[epoch:   52] loss: 0.693\n[epoch:   53] loss: 0.693\n[epoch:   54] loss: 0.693\n[epoch:   55] loss: 0.693\n[epoch:   56] loss: 0.693\n[epoch:   57] loss: 0.693\n[epoch:   58] loss: 0.693\n[epoch:   59] loss: 0.693\n[epoch:   60] loss: 0.693\n"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-8c6b95e4e06a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpricing_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclaims_raw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/code/imperial/neural-networks/part3_pricing_model.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X_raw, y_raw, claims_raw)\u001b[0m\n\u001b[1;32m    215\u001b[0m                 self.base_classifier, X_clean, y_raw)\n\u001b[1;32m    216\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 217\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase_classifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_clean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_raw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    218\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrained\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/code/imperial/neural-networks/part2_claim_classifier.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X_raw, y_raw)\u001b[0m\n\u001b[1;32m    254\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    255\u001b[0m                 \u001b[0;31m# Determine prediction and loss function of neural network\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 256\u001b[0;31m                 \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    257\u001b[0m                 \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    258\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    530\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    531\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 532\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    533\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    534\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/code/imperial/neural-networks/part2_claim_classifier.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     57\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtanh2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ml3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtanh3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ml4\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    530\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    531\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 532\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    533\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    534\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/torch/nn/modules/activation.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    293\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 295\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtanh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    296\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "text": "[epoch:    1] loss: 0.695\n[epoch:    2] loss: 0.694\n[epoch:    3] loss: 0.693\n[epoch:    4] loss: 0.693\n[epoch:    5] loss: 0.693\n[epoch:    6] loss: 0.693\n[epoch:    7] loss: 0.693\n[epoch:    8] loss: 0.693\n[epoch:    9] loss: 0.693\n[epoch:   10] loss: 0.693\n[epoch:   11] loss: 0.693\n[epoch:   12] loss: 0.693\n[epoch:   13] loss: 0.693\n[epoch:   14] loss: 0.693\n[epoch:   15] loss: 0.693\n[epoch:   16] loss: 0.693\n[epoch:   17] loss: 0.693\n[epoch:   18] loss: 0.693\n[epoch:   19] loss: 0.693\n[epoch:   20] loss: 0.693\n"
     }
    ],
    "source": [
@@ -173,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,41 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([], dtype=float32)"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred[y_pred > 0.1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "\n\nConfusion Matrix\n[[14454     0]\n [ 1430     0]]\n\n\nConfusion Report: Accuracy, F1 Score and ROC Accuracy:\n              precision    recall  f1-score   support\n\n           0       0.91      1.00      0.95     14454\n           1       0.00      0.00      0.00      1430\n\n    accuracy                           0.91     15884\n   macro avg       0.45      0.50      0.48     15884\nweighted avg       0.83      0.91      0.87     15884\n\n\n\nROC Accuracy:\n0.5\n"
-    },
-    {
-     "data": {
-      "text/plain": "0.5"
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pricing_model.evaluate_architecture(X_test, y_test)"
    ]
